# tomogui

./: .gitignore  .readthedocs.yml  =3.9  HDF5_VIEWER_INTEGRATION.md  MANIFEST.in  README.md  environment.yml  pyproject.toml  tomocupy_gui.py
.claude/: .nfs0000000004d134ed000003d4
docs/: README.md  capture_screenshots.py  conf.py  index.rst
docs/_static/screenshots/: README.md
docs/advanced/: cor_management.rst  gpu_management.rst  ssh_setup.rst  troubleshooting.rst
docs/developer/: api_reference.rst  architecture.rst  contributing.rst
docs/features/: advanced_config.rst  batch_tab.rst  hdf5_viewer.rst  main_tab.rst  reconstruction_params.rst  tomolog_integration.rst
docs/user_guide/: ai_reco.rst  batch_processing.rst  getting_started.rst  installation.rst  interface_overview.rst  reconstruction.rst  themes.rst
src/tomogui/: .loglogin  __init__.py  __main__.py  _infer_worker.py  batch_progress_window.py  chatbot.py  chatbot_knowledge.md  gui.py  hdf5_viewer.py  theme_manager.py
src/tomogui/AImodels/: README.txt
src/tomogui/_tomocor_infer/: __init__.py  _utils.py  inference.py  model_archs.py
src/tomogui/styles/: themes.py  tomoGUI_mpl_bright.mplstyle  tomoGUI_mpl_dark.mplstyle  tomoGUI_mpl_format.mplstyle
